# oct-dme

./: .gitignore  preprocess.py  pyproject.toml  reject.py  test_train_splitter.py
.github/workflows/: format.yml
src/: preprocess.py  preprocess_all.py  reject.py  splitter.py  utils.py
