[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "project"
version = "0.0.0"
description = "project"
license = "Proprietary"
authors = [
    "TheerapakG <theerapakg@gmail.com>",
]

[tool.poetry.dependencies]
python = "^3.8"

scikit-learn = "^1.2.2"
opencv-python = "^4.7.0.72"
rich = "^13.4.2"
fastai = "^2.7.12"
datasets = "^2.13.1"
jupyter = "^1.0.0"
