[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "project"
version = "0.0.0"
description = "project"
license = "Proprietary"
authors = [
    "TheerapakG <theerapakg@gmail.com>",
]

[tool.poetry.dependencies]
python = "^3.9"

scikit-learn = "^1.3.0"
opencv-python = "^4.8.0.74"
rich = "^13.4.2"
fastai = "^2.7.12"
datasets = "^2.13.1"
jupyter = "^1.0.0"
