[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "project"
version = "0.0.0"
description = "project"
license = "Proprietary"
authors = [
    "TheerapakG <theerapakg@gmail.com>",
]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"

scikit-learn = "^1.3.0"
opencv-python = "^4.8.0.74"
rich = "^13.4.2"
fastai = "^2.7.12"
datasets = "^2.13.1"
jupyter = "^1.0.0"
ray = {extras = ["air"], version = "^2.5.1"}
optuna = "^3.2.0"
torch = {version = "^2.0.1+cpu", source = "pytorch"}
torchvision = {version = "^0.15.2+cpu", source = "pytorch"}
fastapi = "^0.100.1"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "supplemental"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

